packages/jsii/test/negatives/neg.double-interface-members-method.ts
///!MATCH_ERROR: Interface declares same member as inherited interface: foo

export interface IA {
  foo(): void;
}
export interface IB extends IA {
  foo(): void;
}

